[package]
name = "termsweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"

[build]
rustflags = [
"-C",
# Improves performance while sacrificing compatibility
#"target-cpu=native",
#Pick one of the two following options, prefer mold if available
"link-arg=-fuse-ld=lld",
#"link-arg=-fuse-ld=mold"

# Nightly
   "-Zshare-generics=y",
   "-Zthreads=0",
]

[dependencies]
anyhow = "1.0.80"
crossterm = "0.27"
home = "0.5.9"
rand = "0.8.5"
ratatui = "0.27"
